@@ -364,7 +364,7 @@ else
    # No secure moves available, use home dir
    DEBUG 1 "mv -T not available"
    MV="mv"
-   screensaver_file="$HOME/.xdg-screensaver-"`echo $HOSTNAME-$DISPLAY | sed 's/:/-/g'`
+   screensaver_file="$HOME/.xdg-screensaver-"`echo $(hostname)-$DISPLAY | sed 's/:/-/g'`
 fi
 lockfile_command=`which lockfile 2> /dev/null`
 
@@ -464,7 +464,7 @@ do_resume()
   unlockfile # Free lockfile
   if [ -n "$xprop_pid" ] && ps -p "$xprop_pid" 2> /dev/null | grep xprop > /dev/null; then
      # Kill the tracking process 
-     kill -TERM $xprop_pid
+     kill -s TERM $xprop_pid
   fi
   cleanup_suspend  
 }
