@@ -3,6 +3,9 @@
 2009-07-26 Fathi Boudra <fabo@debian.org>
     * Fix basename usage when filename contains spaces (BR18567)
 
+2009-07-26 Fathi Boudra <fabo@debian.org>
+    * Fix bashisms used in xdg-mime and xdg-screensaver (BR15827)
+
 2008-08-11 Rex Dieter <rdieter@fedoraproject.org>
     * initial support for KDE 4
     * Add dbus commands to xdg-screensaver for KDE 4 (BR17537)
